# jdrummer

./: CMakeLists.txt  README.md
Grooves/: beat_info_and_stuff.txt
Source/: AudioAnalyzer.cpp  AudioAnalyzer.h  GrooveManager.cpp  GrooveManager.h  JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoundFontManager.cpp  SoundFontManager.h  jdrummergrooveanalysis.md
Source/Components/: BandmatePanel.cpp  BandmatePanel.h  DrumPad.cpp  DrumPad.h  DrumPadGrid.cpp  DrumPadGrid.h  GrooveBrowser.cpp  GrooveBrowser.h  GrooveComposer.cpp  GrooveComposer.h  GroovesPanel.cpp  GroovesPanel.h  KitSelector.cpp  KitSelector.h  PadControls.cpp  PadControls.h
cmake/: windows-toolchain.cmake
soundfonts/: HipHop-1.sf2  HipHop-2.sf2  Travis_Barker.sf2
